[package]
name = "advent_of_code_2019"
version = "0.1.0"
authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
ggez = "0.5"
log = "0.4"
rayon = "1"

[dev-dependencies]
pretty_assertions = "0.6"
