[package]
name = "advent_of_code_2019"
version = "0.1.0"
authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4"
env_logger = "0.7"
ggez = "0.5"
itertools = "0.8"
log = "0.4"
num = "0.2"
rayon = "1"
regex = "1"

[dev-dependencies]
assert_approx_eq = "1"
pretty_assertions = "0.6"
